--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,57 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.container {
+    width: 700px;
+    height: 700px;
+    background-color: lightgray;
+    margin-top: 100px;
+}
+.title {
+    color:orange;
+    font-size:100px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+}
+title.cont {
+    width: 100%;
+    height: 100px;
+    margin: 10px;
+}
+.inputcont{
+    background-color: white;
+    color: orange;
+    font-size: xx-large;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+}
+.awe{
+    margin-right: 10px;
+    float:right;
+    align-items: center;
+}
+#app{
+    background-color:yellowgreen;
+}
+.inp{
+    color: grey;
+    border: none;
+    outline-color:white;
+}
+.lil{
+    border-bottom: solid 5px yellow;
+}
+.ul1{
+    list-style-type:none;
+}
+.b1{
+    margin-left: 20px;
+	border-radius: 8px;
+	border: 1px black solid;
+	background-color: grey;
+	color: black;
+	height: 50px;
+	cursor: pointer;						
+}
+.b2{
+    justify-content: center;
+}
